--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@ $(function(){
    });
 });
 </script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-177766883-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-177766883-1');
+</script>
+
+</head>
 </head>
 
 <body id="wrap" class="preload">
