--- a/index.html
+++ b/index.html
@@ -64,9 +64,16 @@ $(function(){
       return false;
    });
 });
-</script>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-177766883-1"></script>
+</script> 
+	
+<script>
+$(function() {
+	document.body.scrollTop = document.documentElement.scrollTop = 0;
+});
+</script> 
+
+<!-- Global site tag (gtag.js) - Google Analytics --> 
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-177766883-1"></script> 
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -74,8 +81,6 @@ $(function(){
 
   gtag('config', 'UA-177766883-1');
 </script>
-
-</head>
 </head>
 
 <body id="wrap" class="preload">
@@ -349,6 +354,5 @@ video.play();
 //video = $('#main-video')[0];
 //video.pause();
 </script>
-	
 </body>
 </html>
