--- a/dance.html
+++ b/dance.html
@@ -7,7 +7,7 @@
 	4. Blank lines will be removed automatically.
 	5. Remove unnecessary comments before creating your template.
 -->
-<html>
+<html lang="ja">
 <head>
 <meta charset="UTF-8">
 <meta name="authoring-tool" content="Adobe_Animate_CC">
@@ -76,6 +76,7 @@ function playSound(id, loop, offset) {
 
   gtag('config', 'UA-177766883-1');
 </script>
+
 </head>
 <body onload="init();" style="margin:0px;" oncontextmenu="return false;">
 <div id="animation_container" style="background-color:rgba(255, 255, 255, 0.00); width:884px; height:900px">
