--- a/index.html
+++ b/index.html
@@ -335,6 +335,9 @@ $(function() {
       </video>
     </div>
   </main>
+  <footer class="footerArea">
+      <p>(c) nyankero.com</p>
+  </footer>
 </div>
 <!-----------------------------------------------------------------------------------------
  other scripts
