jsコンテンツ追加の修正
jsコンテンツ追加の修正

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ $(function() {
         <ul class="menu">
           <li> <a href="#top" class="line01">TOP</a> </li>
           <li> <a href="#web" class="line01">WEB</a> </li>
+          <li> <a href="#js" class="line01">JS</a> </li>
           <li> <a href="#lineStamp" class="line01">LINEスタンプ</a> </li>
           <li> <a href="#game" class="line02">カジュアル<br>
             ゲーム</a> </li>
@@ -125,9 +126,10 @@ $(function() {
       <ul id="menuWaku">
         <li id="menu1" class="menu"> <a href="#top">TOP</a> </li>
         <li id="menu2" class="menu"> <a href="#web">WEB</a> </li>
-        <li id="menu3" class="menu"> <a href="#lineStamp">LINEスタンプ</a> </li>
-        <li id="menu4" class="menu"> <a href="#game">カジュアルゲーム</a> </li>
-        <li id="menu5" class="menu"> <a href="#other">その他</a> </li>
+        <li id="menu3" class="menu"> <a href="#js">JS</a> </li>
+        <li id="menu4" class="menu"> <a href="#lineStamp">LINEスタンプ</a> </li>
+        <li id="menu5" class="menu"> <a href="#game">カジュアルゲーム</a> </li>
+        <li id="menu6" class="menu"> <a href="#other">その他</a> </li>
       </ul>
     </div >
   </header>
@@ -143,7 +145,7 @@ $(function() {
     <section id="web" class="mainArea02">
       <div class="wow bounceInDown handPoint" data-wow-offset="150"> <img src="assets/images/ch_02.png" alt="キャラクター画像2"> </div>
       <h1 class="wow bounceInLeft facePoint" data-wow-delay="0.2s" data-wow-offset="0">ここは<br>
-        Webだよ!</h1>
+        Webです!</h1>
       <h2 class="wow bounceInLeft " data-wow-delay="0.4s" data-wow-offset="0">今まで携わったサイトです。<br>
         画像をクリックしてください。</h2>
       <div class="row">
@@ -215,12 +217,52 @@ $(function() {
         </div>
       </div>
     </section>
+    <!--js-->
+    <p id="js" style="margin-top: 30px;"></p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <section class="mainArea01">
+      <div class="wow bounceInDown" data-wow-offset="150"> <img src="assets/images/ch_01_2.png" alt="キャラクター画像1" class="img_height"> </div>
+      <h1 class="wow bounceInLeft" data-wow-delay="0.2s" data-wow-offset="0">ここは<br>
+        Java<br class="sp">
+        Script<br class="sp">
+        です!</h1>
+      <h2 class="wow bounceInLeft" data-wow-delay="0.4s" data-wow-offset="0">画像をクリックしてください。</h2>
+      <div class="row">
+        <div class="col col-md-half02">
+          <div class="wow bounceInLeft" data-wow-delay="0.8s" data-wow-offset="0">
+            <div class="balloon1">
+              <p>Vue.js学習01</p>
+              <div class="grid-list-item"><a href="assets/vue/vue01/index.html" target="_blank"><img src="assets/images/vue01.png" alt="Vue.js学習01の画像"></a></div>
+            </div>
+          </div>
+        </div>
+        <div class="col col-md-half02">
+          <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
+            <div class="balloon1">
+              <p>Vue.js学習02</p>
+              <div class="grid-list-item"><a href="assets/vue/vue02/index.html" target="_blank"><img  src="assets/images/vue02.png" alt="Vue.js学習02の画像"></a></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  <!--jsおわり-->
+
+
+
+
+
+
     <section id="lineStamp" class="mainArea01">
       <div class="wow bounceInDown" data-wow-offset="150"> <img src="assets/images/ch_01_2.png" alt="キャラクター画像1" class="img_height"> </div>
       <h1 class="wow bounceInLeft" data-wow-delay="0.2s" data-wow-offset="0">ここは<br>
         LINE<br class="sp">
         スタンプ<br class="sp">
-        だよ!</h1>
+        です!</h1>
       <h2 class="wow bounceInLeft" data-wow-delay="0.4s" data-wow-offset="0">画像をクリックしてください。</h2>
       <div class="row">
         <div class="col col-md-half02">
@@ -247,7 +289,7 @@ $(function() {
       <h1 class="wow bounceInLeft facePoint04" data-wow-delay="0.2s" data-wow-offset="0">ここは<br>
         カジュアル<br class="sp">
         ゲーム<br class="sp">
-        だよ!</h1>
+        です!</h1>
       <h2 class="wow bounceInLeft " data-wow-delay="0.4s" data-wow-offset="0">画像をクリックしてください。</h2>
       <div class="row" style="padding-bottom:100px; ">
         <div class="col col-md-half02">
@@ -272,7 +314,7 @@ $(function() {
     <section id="other" class="mainArea01">
       <div class="wow bounceInDown" data-wow-offset="150"> <img src="assets/images/ch_01_3.png" alt="キャラクター画像3" class="img_height"> </div>
       <h1 class="wow bounceInLeft" data-wow-delay="0.2s" data-wow-offset="0">ここは<br>
-        その他だよ!</h1>
+        その他です!</h1>
       <h2 class="wow bounceInLeft " data-wow-delay="0.4s" data-wow-offset="0" style="margin-top: 30px;">☆シネマグラフ☆</h2>
 		
 		
@@ -367,7 +409,8 @@ $(function() {
     </div>
   </main>
   <footer class="footerArea">
-      <p>(c) nyankero.com</p>
+      <p>おわり</p>
+      <!-- <p>(c) nyankero.com</p> -->
   </footer>
 </div>
 <!-----------------------------------------------------------------------------------------
