--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ $(function() {
       
       <div class="row" style="text-align: center;">
         <h2 class="wow bounceInLeft " data-wow-delay="0.4s" data-wow-offset="0" style="margin-top: 80px;">☆タイムラプス☆</h2>
-        <div class="col col-md-half02">
+        <div class="col col-md-half">
           <div class="wow bounceInLeft" data-wow-delay="0.8s" data-wow-offset="0">
             <div class="balloon1">
               <p>インスタ用動画01</p>
@@ -380,7 +380,7 @@ $(function() {
             </div>
           </div>
         </div>
-        <div class="col col-md-half02">
+        <div class="col col-md-half">
           <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
             <div class="balloon1">
               <p>インスタ用動画02</p>
@@ -388,7 +388,7 @@ $(function() {
             </div>
           </div>
         </div>
-	<div class="col col-md-half02">
+	<div class="col col-md-half">
           <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
             <div class="balloon1">
               <p>インスタ用動画03</p>
