--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ $(function() {
       <div class="wow bounceInDown" data-wow-offset="150"> <img src="assets/images/ch_01_3.png" alt="キャラクター画像3" class="img_height"> </div>
       <h1 class="wow bounceInLeft" data-wow-delay="0.2s" data-wow-offset="0">ここは<br>
         その他です!</h1>
-      <h2 class="wow bounceInLeft " data-wow-delay="0.4s" data-wow-offset="0" style="margin-top: 30px;">☆シネマグラフ☆</h2>
+      <h2 class="wow bounceInLeft " data-wow-delay="0.4s" data-wow-offset="0" style="margin-top: 30px;">☆制作した動画☆</h2>
 		
 		
 		
@@ -396,8 +396,16 @@ $(function() {
             </div>
           </div>
         </div>
+　　　　　<div class="col col-md-half">
+          <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
+            <div class="balloon1">
+              <p>インスタ用動画04</p>
+              <div class="grid-list-item"> <a data-rel="lightcase" href="https://youtube.com/shorts/97pfXbGfmp8?si=IwFCoHPuQVvtqyNQ"><img src="assets/images/timer03.png" alt="インスタ用動画04"></a> </div>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="wow bounceInDown handPoint03" data-wow-offset="150"> <img  src="assets/images/ch_02.png" alt="インスタ用動画02" class="img_height"> </div>
+      <div class="wow bounceInDown handPoint03" data-wow-offset="150"> <img  src="assets/images/ch_02.png" alt="" class="img_height"> </div>
       <p style="padding-bottom:15vh "></p>
     </section>
     
