--- a/index.html
+++ b/index.html
@@ -337,32 +337,32 @@ $(function() {
         <div class="col col-md-half">
           <div class="wow bounceInLeft" data-wow-delay="0.8s" data-wow-offset="0">
             <div class="balloon1">
-              <p>制作したyoutube動画01</p>
-              <div class="grid-list-item"> <a href="https://youtu.be/FrqTUjK62uM?si=CKI2c3RrmjMjYtE6" data-rel="lightcase:Cinemagraphs" title="制作したyoutube動画01"><img src="assets/images/cinema01.png"  alt="制作したyoutube動画01"/></a> </div>
+              <p>youtube動画01</p>
+              <div class="grid-list-item"> <a href="https://youtu.be/FrqTUjK62uM?si=CKI2c3RrmjMjYtE6" data-rel="lightcase:Cinemagraphs" title="youtube動画01"><img src="assets/images/cinema01.png"  alt="youtube動画01"/></a> </div>
             </div>
           </div>
         </div>
         <div class="col col-md-half">
           <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
             <div class="balloon1">
-              <p>制作したyoutube動画02</p>
-              <div class="grid-list-item"> <a href="https://youtu.be/G09R5o9JFQ4?si=y1t8BroeiuUSys8T" data-rel="lightcase:Cinemagraphs" title="制作したyoutube動画02"><img src="assets/images/cinema02.png"  alt="制作したyoutube動画02"/></a> </div>
+              <p>youtube動画02</p>
+              <div class="grid-list-item"> <a href="https://youtu.be/G09R5o9JFQ4?si=y1t8BroeiuUSys8T" data-rel="lightcase:Cinemagraphs" title="youtube動画02"><img src="assets/images/cinema02.png"  alt="youtube動画02"/></a> </div>
             </div>
           </div>
         </div>
         <div class="col col-md-half">
           <div class="wow bounceInLeft" data-wow-delay="0.8s" data-wow-offset="0">
             <div class="balloon1">
-              <p>制作したyoutube動画03</p>
-              <div class="grid-list-item"> <a href="https://youtu.be/4gwQoJJznCY?si=kBfR59IkPtASRC0o" data-rel="lightcase:Cinemagraphs" title="制作したyoutube動画03"><img src="assets/images/cinema03.png"  alt="制作したyoutube動画03"/></a> </div>
+              <p>youtube動画03</p>
+              <div class="grid-list-item"> <a href="https://youtu.be/4gwQoJJznCY?si=kBfR59IkPtASRC0o" data-rel="lightcase:Cinemagraphs" title="youtube動画03"><img src="assets/images/cinema03.png"  alt="youtube動画03"/></a> </div>
             </div>
           </div>
         </div>
         <div class="col col-md-half">
           <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
             <div class="balloon1">
-              <p>制作したyoutube動画04</p>
-              <div class="grid-list-item"> <a href="https://youtu.be/jaIn_FPCPEs?si=CWvBwZduTedoa-JI" data-rel="lightcase:Cinemagraphs" title="制作したyoutube動画04"><img src="assets/images/cinema04.png"  alt="制作したyoutube動画04"/></a> </div>
+              <p>youtube動画04</p>
+              <div class="grid-list-item"> <a href="https://youtu.be/jaIn_FPCPEs?si=CWvBwZduTedoa-JI" data-rel="lightcase:Cinemagraphs" title="youtube動画04"><img src="assets/images/cinema04.png"  alt="youtube動画04"/></a> </div>
             </div>
           </div>
         </div>
@@ -375,32 +375,32 @@ $(function() {
         <div class="col col-md-half">
           <div class="wow bounceInLeft" data-wow-delay="0.8s" data-wow-offset="0">
             <div class="balloon1">
-              <p>インスタ用動画01</p>
-              <div class="grid-list-item"> <a data-rel="lightcase" href="https://youtube.com/shorts/yoCynsUGoQQ?si=ulBSMqqu_DXSY_we"><img src="assets/images/timer01.png" alt="インスタ用動画01"></a> </div>
+              <p>インスタ動画01</p>
+              <div class="grid-list-item"> <a data-rel="lightcase" href="https://youtube.com/shorts/yoCynsUGoQQ?si=ulBSMqqu_DXSY_we"><img src="assets/images/timer01.png" alt="インスタ動画01"></a> </div>
             </div>
           </div>
         </div>
         <div class="col col-md-half">
           <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
             <div class="balloon1">
-              <p>インスタ用動画02</p>
-              <div class="grid-list-item"> <a data-rel="lightcase" href="https://www.youtube.com/embed/zVnPZNdkAKI?rel=0&controls=0&showinfo=0"><img src="assets/images/timer02.png" alt="インスタ用動画02"></a> </div>
+              <p>インスタ動画02</p>
+              <div class="grid-list-item"> <a data-rel="lightcase" href="https://www.youtube.com/embed/zVnPZNdkAKI?rel=0&controls=0&showinfo=0"><img src="assets/images/timer02.png" alt="インスタ動画02"></a> </div>
             </div>
           </div>
         </div>
 	<div class="col col-md-half">
           <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
             <div class="balloon1">
-              <p>インスタ用動画03</p>
-              <div class="grid-list-item"> <a data-rel="lightcase" href="https://youtube.com/shorts/5ZXL8uSKOe0?si=LfGs8QGgtS_L-55f"><img src="assets/images/timer03.png" alt="インスタ用動画03"></a> </div>
+              <p>インスタ動画03</p>
+              <div class="grid-list-item"> <a data-rel="lightcase" href="https://youtube.com/shorts/5ZXL8uSKOe0?si=LfGs8QGgtS_L-55f"><img src="assets/images/timer03.png" alt="インスタ動画03"></a> </div>
             </div>
           </div>
         </div>
 　　　　　<div class="col col-md-half">
           <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
             <div class="balloon1">
-              <p>インスタ用動画04</p>
-              <div class="grid-list-item"> <a data-rel="lightcase" href="https://youtube.com/shorts/97pfXbGfmp8?si=IwFCoHPuQVvtqyNQ"><img src="assets/images/timer03.png" alt="インスタ用動画04"></a> </div>
+              <p>インスタ動画04</p>
+              <div class="grid-list-item"> <a data-rel="lightcase" href="https://youtube.com/shorts/97pfXbGfmp8?si=IwFCoHPuQVvtqyNQ"><img src="assets/images/timer03.png" alt="インスタ動画04"></a> </div>
             </div>
           </div>
         </div>
