--- a/index.html
+++ b/index.html
@@ -152,8 +152,24 @@ $(function() {
         <div class="col col-md-half">
           <div class="wow bounceInLeft" data-wow-delay="0.8s" data-wow-offset="0">
             <div class="balloon2">
+              <p>阪急百貨店神戸店</p>
+              <div class="grid-list-item"><a href="https://www.hankyu-dept.co.jp/kobe/"><img src="assets/images/web007.png" alt="阪急百貨店神戸店" style="width:100%;height:auto;" ></a></div>
+            </div>
+          </div>
+        </div>
+        <div class="col col-md-half">
+          <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
+            <div class="balloon2">
+              <p>保険市場コラム</p>
+              <div class="grid-list-item"><a href="https://www.hokende.com/life-insurance/medical/columns/about_medical_insurance13" target="_blank"><img  src="assets/images/web008.png" alt="保険市場コラムの画像"></a></div>
+            </div>
+          </div>
+        </div>
+        <div class="col col-md-half">
+          <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
+            <div class="balloon2">
               <p>マイ大阪ガス</p>
-              <div class="grid-list-item"><a href="https://www.osakagas.co.jp/ssl/my-page/index.html" target="_blank"><img src="assets/images/web001.png" alt="マイ大阪ガス" style="width:100%;height:auto;" ></a></div>
+              <div class="grid-list-item"><a href="https://www.osakagas.co.jp/ssl/my-page/index.html" target="_blank"><img  src="assets/images/web001.png" alt="マイ大阪ガスの画像"></a></div>
             </div>
           </div>
         </div>
@@ -161,23 +177,7 @@ $(function() {
           <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
             <div class="balloon2">
               <p>株式会社サンアイ</p>
-              <div class="grid-list-item"><a href="http://www.3ai-osaka.com/" target="_blank"><img  src="assets/images/web002.png" alt="五色建設株株式会社の画像"></a></div>
-            </div>
-          </div>
-        </div>
-        <div class="col col-md-half">
-          <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
-            <div class="balloon2">
-              <p>五色建設株式会社</p>
-              <div class="grid-list-item"><a href="https://www.goshiki-kk.com/" target="_blank"><img  src="assets/images/web003.png" alt="五色建設株株式会社の画像"></a></div>
-            </div>
-          </div>
-        </div>
-        <div class="col col-md-half">
-          <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
-            <div class="balloon2">
-              <p>株式会社ダイエイホーム</p>
-              <div class="grid-list-item"><a href="http://www.daieihome.com/bunjouchi/index.html" target="_blank"><img  src="assets/images/web004.png" alt="株式会社ダイエイホームの画像"></a></div>
+              <div class="grid-list-item"><a href="http://www.3ai-osaka.com/" target="_blank"><img  src="assets/images/web002.png" alt="株式会社サンアイの画像"></a></div>
             </div>
           </div>
         </div>
@@ -186,8 +186,24 @@ $(function() {
         <div class="col col-md-half">
           <div class="wow bounceInLeft" data-wow-delay="0.8s" data-wow-offset="0">
             <div class="balloon2">
+              <p>五色建設株式会社</p>
+              <div class="grid-list-item"> <a href="https://www.goshiki-kk.com/" target="_blank"><img src="assets/images/web003.png" alt="五色建設株式会社の画像"></a> </div>
+            </div>
+          </div>
+        </div>
+        <div class="col col-md-half">
+          <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
+            <div class="balloon2">
+              <p>株式会社ダイエイホーム</p>
+              <div class="grid-list-item"><a href="http://www.daieihome.com/bunjouchi/index.html" target="_blank" target="_blank"><img  src="assets/images/web004.png" alt="株式会社ダイエイホームの画像"></a></div>
+            </div>
+          </div>
+        </div>
+        <div class="col col-md-half">
+          <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
+            <div class="balloon2">
               <p>マツダホーム株式会社</p>
-              <div class="grid-list-item"> <a href="https://www.matsudahome.co.jp/?gclid=Cj0KCQjw0IDtBRC6ARIsAIA5gWusOPLXxFQcED6PrnsacblaAuxIo9QzQmD62aayjcotHiGetcjkj8IaAlHJEALw_wcB" target="_blank"><img src="assets/images/web005.png" alt="マツダホーム株式会社"></a> </div>
+              <div class="grid-list-item"><a href="https://www.matsudahome.co.jp/?gclid=Cj0KCQjw0IDtBRC6ARIsAIA5gWusOPLXxFQcED6PrnsacblaAuxIo9QzQmD62aayjcotHiGetcjkj8IaAlHJEALw_wcB" target="_blank"><img  src="assets/images/web005.png" alt="マツダホーム株式会社の画像"></a></div>
             </div>
           </div>
         </div>
@@ -195,23 +211,7 @@ $(function() {
           <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
             <div class="balloon2">
               <p>フジツウ住宅販売株式会社</p>
-              <div class="grid-list-item"><a href="https://www.fujitsu-home.com/mortgage/" target="_blank"><img  src="assets/images/web006.png" alt="フジツウ住宅販売株式会社"></a></div>
-            </div>
-          </div>
-        </div>
-        <div class="col col-md-half">
-          <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
-            <div class="balloon2">
-              <p>有限会社アルファホーム</p>
-              <div class="grid-list-item"><a href="https://www.alphahome.co.jp/company/index.html" target="_blank"><img  src="assets/images/web007.png" alt="有限会社アルファホームの画像"></a></div>
-            </div>
-          </div>
-        </div>
-        <div class="col col-md-half">
-          <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
-            <div class="balloon2">
-              <p>チボリゴルフスクール</p>
-              <div class="grid-list-item"><a href="https://k-kmg.jp/school/" target="_blank"><img  src="assets/images/web008.png" alt="チボリゴルフスクールの画像"></a></div>
+              <div class="grid-list-item"><a href="https://www.matsudahome.co.jp/?gclid=Cj0KCQjw0IDtBRC6ARIsAIA5gWusOPLXxFQcED6PrnsacblaAuxIo9QzQmD62aayjcotHiGetcjkj8IaAlHJEALw_wcB" target="_blank"><img  src="assets/images/web006.png" alt="フジツウ住宅販売株式会社の画像"></a></div>
             </div>
           </div>
         </div>
