--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ $(function() {
           </div>
         </div>
       </div>
-      <div class="wow bounceInDown handPoint03" data-wow-offset="150"> <img  src="assets/images/ch_02.png" alt="" class="img_height"> </div>
+      <div class="wow bounceInDown handPoint03" data-wow-offset="150"> <img  src="assets/images/ch_02.png" alt="インスタ動画04" class="img_height"> </div>
       <p style="padding-bottom:15vh "></p>
     </section>
     
