--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ $(function() {
           <div class="wow bounceInLeft" data-wow-delay="0.8s" data-wow-offset="0">
             <div class="balloon1">
               <p>youtube動画01</p>
-              <div class="grid-list-item"> <a href="https://youtu.be/FrqTUjK62uM?si=CKI2c3RrmjMjYtE6" data-rel="lightcase:Cinemagraphs" title="youtube動画01"><img src="assets/images/cinema01.png"  alt="youtube動画01"/></a> </div>
+              <div class="grid-list-item"> <a href="https://www.youtube.com/embed/FrqTUjK62uM" data-rel="lightcase:Cinemagraphs" title="youtube動画01"><img src="assets/images/cinema01.png"  alt="youtube動画01"/></a> </div>
             </div>
           </div>
         </div>
