--- a/index.html
+++ b/index.html
@@ -331,65 +331,91 @@ $(function() {
   </div>
 </section>
       
-      <!--シネマグラフ-->
+<h2 class="wow bounceInLeft " data-wow-delay="0.4s" data-wow-offset="0" style="margin-top: 30px;">☆制作した動画☆</h2>
+      <h2 class="wow bounceInLeft " data-wow-delay="0.4s" data-wow-offset="0" style="margin-top: 30px;">☆シネマグラフ☆</h2>
+
+
+
+@@ -331,81 +331,65 @@ <h2 class="wow bounceInLeft " data-wow-delay="0.4s" data-wow-offset="0" style="m
+  </div>
+</section>
+
+      <!--制作した動画-->
 
       <div class="row">
         <div class="col col-md-half">
           <div class="wow bounceInLeft" data-wow-delay="0.8s" data-wow-offset="0">
             <div class="balloon1">
-              <p>シネマグラフ01</p>
-              <div class="grid-list-item"> <a href="assets/images/001.gif" data-rel="lightcase:Cinemagraphs" title="シネマグラフ01"><img src="assets/images/cinema01.png"  alt="シネマグラフ01"/></a> </div>
-               </div>
+              <p>youtube動画01</p>
+              <div class="grid-list-item"> <a href="https://www.youtube.com/embed/FrqTUjK62uM" data-rel="lightcase:Cinemagraphs" title="youtube動画01"><img src="assets/images/cinema01.png"  alt="youtube動画01"/></a> </div>
+            </div>
           </div>
         </div>
         <div class="col col-md-half">
           <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
             <div class="balloon1">
-              <p>シネマグラフ02</p>
-              <div class="grid-list-item"> <a href="assets/images/002.gif" data-rel="lightcase:Cinemagraphs" title="シネマグラフ02"><img src="assets/images/cinema02.png"  alt="シネマグラフ02"/></a> </div>
-             </div>
+              <p>youtube動画02</p>
+              <div class="grid-list-item"> <a href="https://www.youtube.com/embed/G09R5o9JFQ4" data-rel="lightcase:Cinemagraphs" title="youtube動画02"><img src="assets/images/cinema02.png"  alt="youtube動画02"/></a> </div>
+            </div>
           </div>
         </div>
         <div class="col col-md-half">
           <div class="wow bounceInLeft" data-wow-delay="0.8s" data-wow-offset="0">
             <div class="balloon1">
-              <p>シネマグラフ03</p>
-              <div class="grid-list-item"> <a href="assets/images/003.gif" data-rel="lightcase:Cinemagraphs" title="シネマグラフ03"><img src="assets/images/cinema03.png"  alt="シネマグラフ03"/></a> </div>
-            </div>
+              <p>youtube動画03</p>
+              <div class="grid-list-item"> <a href="https://www.youtube.com/embed/4gwQoJJznCY" data-rel="lightcase:Cinemagraphs" title="youtube動画03"><img src="assets/images/cinema03.png"  alt="youtube動画03"/></a> </div>
           </div>
         </div>
         <div class="col col-md-half">
           <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
             <div class="balloon1">
-              <p>シネマグラフ04</p>
-              <div class="grid-list-item"> <a href="assets/images/004.gif" data-rel="lightcase:Cinemagraphs" title="シネマグラフ04"><img src="assets/images/cinema04.png"  alt="シネマグラフ04"/></a> </div>
-            </div>
+              <p>youtube動画04</p>
+              <div class="grid-list-item"> <a href="https://www.youtube.com/embed/jaIn_FPCPEs" data-rel="lightcase:Cinemagraphs" title="youtube動画04"><img src="assets/images/cinema04.png"  alt="youtube動画04"/></a> </div>
           </div>
         </div>
       </div>
 
+      <!--インスタ用動画-->
+
+
       <!--タイムラプス-->
       <div class="row" style="text-align: center;">
         <h2 class="wow bounceInLeft " data-wow-delay="0.4s" data-wow-offset="0" style="margin-top: 80px;">☆タイムラプス☆</h2>
+        <div class="col col-md-half">
         <div class="col col-md-half02">
           <div class="wow bounceInLeft" data-wow-delay="0.8s" data-wow-offset="0">
             <div class="balloon1">
-              <p>タイムラプス動画01</p>
-              <div class="grid-list-item"> <a data-rel="lightcase" href="https://www.youtube.com/embed/3eZqMv5b4UU?rel=0&controls=0&showinfo=0"><img src="assets/images/timer01.png" alt="タイムラプス動画01"></a> </div>
+              <p>インスタ動画01</p>
+              <div class="grid-list-item"> <a data-rel="lightcase" href="https://www.youtube.com/embed/yoCynsUGoQQ"><img src="assets/images/timer01.png" alt="インスタ動画01"></a> </div>
+          </div>
+        </div>
+        <div class="col col-md-half">
+          <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
+            <div class="balloon1">
+              <p>インスタ動画02</p>
+              <div class="grid-list-item"> <a data-rel="lightcase" href="https://www.youtube.com/embed/zVnPZNdkAKI"><img src="assets/images/timer02.png" alt="インスタ動画02"></a> </div>
             </div>
           </div>
         </div>
+	<div class="col col-md-half">
+          <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
+            <div class="balloon1">
+              <p>インスタ動画03</p>
+              <div class="grid-list-item"> <a data-rel="lightcase" href="https://www.youtube.com/embed/5ZXL8uSKOe0"><img src="assets/images/timer03.png" alt="インスタ動画03"></a> </div>
+            </div>
+          </div>
+        </div>
+　　　　　<div class="col col-md-half">
         <div class="col col-md-half02">
           <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
             <div class="balloon1">
-              <p>タイムラプス動画02</p>
-              <div class="grid-list-item"> <a data-rel="lightcase" href="https://www.youtube.com/embed/zVnPZNdkAKI?rel=0&controls=0&showinfo=0"><img src="assets/images/timer02.png" alt="タイムラプス動画02"></a> </div>
-            </div>
+              <p>インスタ動画04</p>
+              <div class="grid-list-item"> <a data-rel="lightcase" href="https://www.youtube.com/embed/97pfXbGfmp8"><img src="assets/images/timer03.png" alt="インスタ動画04"></a> </div>
           </div>
         </div>
-	
+
       </div>
-      <div class="wow bounceInDown handPoint03" data-wow-offset="150"> <img  src="assets/images/ch_02.png" alt="キャラクター画像2" class="img_height"> </div>
+      <div class="wow bounceInDown handPoint03" data-wow-offset="150"> <img  src="assets/images/ch_02.png" alt="インスタ動画04" class="img_height"> </div>
       <p style="padding-bottom:15vh "></p>
     </section>
     
