--- a/index.html
+++ b/index.html
@@ -357,6 +357,7 @@ $(function() {
               <div class="grid-list-item"> <a href="https://www.youtube.com/embed/4gwQoJJznCY" data-rel="lightcase:Cinemagraphs" title="youtube動画03"><img src="assets/images/cinema01.png"  alt="youtube動画03"/></a> </div>
           </div>
         </div>
+	</div>
         <div class="col col-md-half">
           <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
             <div class="balloon1">
