--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ $(function() {
 
       <!--タイムラプス-->
       <div class="row" style="text-align: center;">
-        <h2 class="wow bounceInLeft " data-wow-delay="0.4s" data-wow-offset="0" style="margin-top: 80px;">☆タイムラプス☆</h2>
+        <h2 class="wow bounceInLeft " data-wow-delay="0.4s" data-wow-offset="0" style="margin-top: 80px;">☆インスタ動画☆</h2>
         <div class="col col-md-half">
         <div class="col col-md-half02">
           <div class="wow bounceInLeft" data-wow-delay="0.8s" data-wow-offset="0">
