--- a/index.html
+++ b/index.html
@@ -374,13 +374,13 @@ $(function() {
       <div class="row" style="text-align: center;">
         <h2 class="wow bounceInLeft " data-wow-delay="0.4s" data-wow-offset="0" style="margin-top: 80px;">☆インスタ動画☆</h2>
         <div class="col col-md-half">
-        <div class="col col-md-half02">
           <div class="wow bounceInLeft" data-wow-delay="0.8s" data-wow-offset="0">
             <div class="balloon1">
               <p>インスタ動画01</p>
               <div class="grid-list-item"> <a data-rel="lightcase" href="https://www.youtube.com/embed/yoCynsUGoQQ"><img src="assets/images/timer01.png" alt="インスタ動画01"></a> </div>
           </div>
         </div>
+	</div>
         <div class="col col-md-half">
           <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
             <div class="balloon1">
