--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ $(function() {
           <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
             <div class="balloon1">
               <p>インスタ動画02</p>
-              <div class="grid-list-item"> <a data-rel="lightcase" href="https://www.youtube.com/embed/zVnPZNdkAKI"><img src="assets/images/timer01.png" alt="インスタ動画02"></a> </div>
+              <div class="grid-list-item"> <a data-rel="lightcase" href="https://www.youtube.com/embed/9jsucVxbQNc"><img src="assets/images/timer01.png" alt="インスタ動画02"></a> </div>
             </div>
           </div>
         </div>
