--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ $(function() {
           <li> <a href="#lineStamp" class="line01">LINEスタンプ</a> </li>
           <li> <a href="#game" class="line02">カジュアル<br>
             ゲーム</a> </li>
-          <li> <a href="#other" class="line01">その他</a> </li>
+          <li> <a href="#other" class="line01">動画制作</a> </li>
         </ul>
       </nav>
       <div id="menuIcon">
@@ -129,7 +129,7 @@ $(function() {
         <li id="menu3" class="menu"> <a href="#js">JS</a> </li>
         <li id="menu4" class="menu"> <a href="#lineStamp">LINEスタンプ</a> </li>
         <li id="menu5" class="menu"> <a href="#game">カジュアルゲーム</a> </li>
-        <li id="menu6" class="menu"> <a href="#other">その他</a> </li>
+        <li id="menu6" class="menu"> <a href="#other">動画制作</a> </li>
       </ul>
     </div >
   </header>
@@ -314,8 +314,8 @@ $(function() {
     <section id="other" class="mainArea01">
       <div class="wow bounceInDown" data-wow-offset="150"> <img src="assets/images/ch_01_3.png" alt="キャラクター画像3" class="img_height"> </div>
       <h1 class="wow bounceInLeft" data-wow-delay="0.2s" data-wow-offset="0">ここは<br>
-        その他です!</h1>
-      <h2 class="wow bounceInLeft " data-wow-delay="0.4s" data-wow-offset="0" style="margin-top: 30px;">☆制作した動画☆</h2>
+        動画制作です!</h1>
+      <h2 class="wow bounceInLeft " data-wow-delay="0.4s" data-wow-offset="0" style="margin-top: 30px;">☆制作した案件動画☆</h2>
 		
 		
 		
@@ -331,7 +331,7 @@ $(function() {
   </div>
 </section>
 
-      <!--制作した動画-->
+      <!--制作した案件動-->
 
       <div class="row">
         <div class="col col-md-half">
