--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             <div class="wow bounceInLeft" data-wow-delay="0.8s" data-wow-offset="0">
               <div class="balloon1">
                 <p>JS学習01</p>
-                <div class="grid-list-item"><a href="assets/js/js01/index.html" target="_blank"><img
+                <div class="grid-list-item"><a href="assets/jsl/js01/index.html" target="_blank"><img
                       src="assets/images/js.png" alt="JS学習01の画像"></a></div>
               </div>
             </div>
@@ -281,7 +281,7 @@
             <div class="wow bounceInLeft" data-wow-delay="0.6s" data-wow-offset="0">
               <div class="balloon1">
                 <p>js学習02</p>
-                <div class="grid-list-item"><a href="assets/js/js02/index.html" target="_blank"><img
+                <div class="grid-list-item"><a href="assets/jsl/js02/index.html" target="_blank"><img
                       src="assets/images/js02.png" alt="js学習02の画像"></a></div>
               </div>
             </div>
