--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
               <div class="balloon1">
                 <p>JS学習01</p>
                 <div class="grid-list-item"><a href="assets/jsl/js01/index.html" target="_blank"><img
-                      src="assets/images/js.png" alt="JS学習01の画像"></a></div>
+                      src="assets/images/js01.png" alt="JS学習01の画像"></a></div>
               </div>
             </div>
           </div>
