--- a/index.html
+++ b/index.html
@@ -415,6 +415,7 @@
               </div>
             </div>
           </div>
+          </div>
 
           <!--インスタ用動画-->
           <div class="row" style="text-align: center;">
@@ -463,7 +464,8 @@
             </div>
           </div>
           <div class="wow bounceInDown handPoint03" data-wow-offset="150"> <img src="assets/images/ch_02.png"
-              alt="インスタ動画04" class="img_height"> </div>
+              alt="インスタ動画04" class="img_height">
+          </div>
           <p style="padding-bottom:15vh "></p>
       </section>
 
