--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
   <link rel="stylesheet" href="styles.css">
 
-  <title>☆ラブフリーご近所検索☆</title>
+  <title>【タダマンMAX★GPS検索】</title>
 
 </head>
 
 <body>
   <header>
 
-    <h1>☆ラブフリーご近所検索☆</h1>
+    <h1>【タダマンMAX★GPS検索】</h1>
 
   </header>
 
