--- a/gps/index.html
+++ b/gps/index.html
@@ -9,7 +9,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="styles.css">
 
   <title>【タダマンMAX★GPS検索】</title>
 
@@ -50,9 +50,8 @@
 
 
 
-  <script type="module" src="images.js"></script>
+  <script type="module" src="script.js"></script>
 
 </body>
 
 </html>
-
