--- a/bbs/index.html
+++ b/bbs/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>☆ラブフリー掲示版☆</title>
+    <title>【タダマンMAX★掲示板】</title>
 
     <link rel="stylesheet" href="css/index.css">
 
@@ -16,7 +16,7 @@
 <body>
     <header>
 
-        <h1>☆ラブフリー掲示版☆</h1>
+        <h1>【タダマンMAX★掲示板】</h1>
 
     </header>
 
