--- a/search/index.html
+++ b/search/index.html
@@ -4,7 +4,7 @@
 <html lang="ja">
 
 <head>
-  <title>☆ラブフリータイプ検索☆</title>
+  <title>【タダマンMAX★タイプ検索】</title>
 
   <meta charset="utf-8">
 
@@ -19,7 +19,7 @@
 <body>
   <header>
 
-    <h1>☆ラブフリータイプ検索☆</h1>
+    <h1>【タダマンMAX★タイプ検索】</h1>
 
   </header>
 
