--- a/bbs/index.html
+++ b/bbs/index.html
@@ -9,7 +9,7 @@
 
     <title>【タダマンMAX★掲示板】</title>
 
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
